--- a/css/12bool-framework.css
+++ b/css/12bool-framework.css
@@ -20,68 +20,113 @@
 
 /* colonne */
 
-.col{
+[class*="col-"]{
+    flex: 0 0 auto;
+}
 
+.col{
+    flex-grow: 1;
+    flex-basis: 0;
+    max-width: 100%;
 }
 
 .col-1{
-    width: calc((100% / 12) * 1);
+    flex-basis: calc((100% / 12) * 1);
     max-width: calc((100% / 12) * 1);
 }
 
 .col-2{
-    width: calc((100% / 12) * 2);
+    flex-basis: calc((100% / 12) * 2);
     max-width: calc((100% / 12) * 2);
 }
 
 .col-3{
-    width: calc((100% / 12) * 3);
+    flex-basis: calc((100% / 12) * 3);
     max-width: calc((100% / 12) * 3);
 }
 
 .col-4{
-    width: calc((100% / 12) * 4);
+    flex-basis: calc((100% / 12) * 4);
     max-width: calc((100% / 12) * 4);
 }
 
 .col-5{
-    width: calc((100% / 12) * 5);
+    flex-basis: calc((100% / 12) * 5);
     max-width: calc((100% / 12) * 5);
 }
 
 .col-6{
-    width: calc((100% / 12) * 6);
+    flex-basis: calc((100% / 12) * 6);
     max-width: calc((100% / 12) * 6);
 }
 
 .col-7{
-    width: calc((100% / 12) * 7);
+    flex-basis: calc((100% / 12) * 7);
     max-width: calc((100% / 12) * 7);
 }
 
 .col-8{
-    width: calc((100% / 12) * 8);
+    flex-basis: calc((100% / 12) * 8);
     max-width: calc((100% / 12) * 8);
 }
 
 .col-9{
-    width: calc((100% / 12) * 9);
+    flex-basis: calc((100% / 12) * 9);
     max-width: calc((100% / 12) * 9);
 }
 
 .col-10{
-    width: calc((100% / 12) * 10);
+    flex-basis: calc((100% / 12) * 10);
     max-width: calc((100% / 12) * 10);
 }
 
 .col-11{
-    width: calc((100% / 12) * 11);
+    flex-basis: calc((100% / 12) * 11);
     max-width: calc((100% / 12) * 11);
 }
 
 .col-12{
-    width: calc((100% / 12) * 12);
+    flex-basis: calc((100% / 12) * 12);
     max-width: calc((100% / 12) * 12);
+}
+
+.start{
+    justify-content: flex-start;
+    text-align: start;
+}
+
+.center{
+    justify-content: center;
+    text-align: center;
+}
+
+.end{
+    justify-content: flex-end;
+    text-align: end;
+}
+
+.top{
+    align-items: flex-start;
+}
+
+.middle{
+    align-items: center;
+}
+
+.bottom{
+    align-items: flex-end;
+}
+
+.around{
+    justify-content: space-around;
+}
+
+.between{
+    justify-content: space-between;
+}
+
+.evenly{
+    justify-content: space-evenly;
 }
 
 /* offset  */
