--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 .blue{
     background-color: rgb(0,108,250);
     height: 50px;
+    max-height: 100%;
 }
 
 .riga{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 
