--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
-.blue{
-    background-color: rgb(0,108,250);
+.blue,
+.green{
     height: 50px;
     max-height: 100%;
+}
+
+
+.blue{
+    background-color: rgb(0,108,250);
+    
+}
+.green{
+    background-color: rgb(0,225,101);
+    /* border: 1px solid rgb(0,108,250); */
 }
 
 .riga{
     display: flex;
     align-items: center;
     justify-content: center;
+    
     
 }
 
