--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,39 @@
 .blue,
 .green{
     height: 50px;
-    max-height: 100%;
+}
+
+.grande
+{
+    height: 70px;
+    padding: 8px
 }
 
 
 .blue{
     background-color: rgb(0,108,250);
+    border: 1px solid white;
+    color: white;
     
 }
 .green{
     background-color: rgb(0,225,101);
-    /* border: 1px solid rgb(0,108,250); */
+    border-left: 1px solid rgb(0,108,250);
+    border-right: 1px solid rgb(0,108,250);
+    color: white;
 }
 
 .riga{
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
 }
 
-
+.white{
+    height: 10px;
+}
 /* debug */
 
 [class*="col-"]{
-    border: 1px solid white;
-    color: white;
+   
 }
